<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verylightBlue"
    android:id="@+id/layoutDrawer"
    tools:context=".MainActivity2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="18dp">

            <ImageView
                android:id="@+id/btnMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/outline_menu_open_24" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="HOME"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:id="@+id/refereshLayout"
            android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/navi"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="32sp"
            android:text="@string/list1">
        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.recyclerview.widget.RecyclerView>
        
    </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/navi"
                android:textStyle="bold"
                android:textColor="@color/lightBlue"
                android:textSize="32sp"
                android:text="@string/list2">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/primaryDarkColor"
                android:padding="4dp">

            </View>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/navi"
                android:textStyle="bold"
                android:textColor="@color/lightBlue"
                android:textSize="32sp"
                android:text="@string/list3">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/primaryDarkColor"
                android:padding="4dp">

            </View>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>
<!--        <LinearLayout-->
<!--            android:id="@+id/linearLayout4"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical">-->
<!--            <TextView-->
<!--                android:layout_marginLeft="8dp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/navi"-->
<!--                android:textStyle="bold"-->
<!--                android:textColor="@color/blue"-->
<!--                android:textSize="32sp"-->
<!--                android:text="@string/list4">-->
<!--            </TextView>-->
<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="2dp"-->
<!--                android:background="@color/primaryDarkColor"-->
<!--                android:padding="4dp">-->

<!--            </View>-->
<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/recyclerview4"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->
<!--            </androidx.recyclerview.widget.RecyclerView>-->

<!--        </LinearLayout>-->
    </LinearLayout>
    </ScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>

        <ImageView
            android:id="@+id/imageAddMain2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_add"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        </ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:id="@+id/nav"
        android:layout_gravity="start"
        android:background="@color/white"
        android:layout_height="match_parent"
        app:itemBackground="@android:color/transparent"
        app:headerLayout="@layout/header_nav_layout"
        app:menu="@menu/menu_nav"
        app:itemIconTint="@color/drawer_item"
        app:itemTextColor="@color/drawer_item">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>